examples/test/testpolicy13834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13834
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key23: value18
      key16: value44
      key17: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value40
          key27: value24
          key14: value38
